--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test mocha --exit",
+    "eslint": "./node_modules/eslint/bin/eslint.js ./server.js ./knexfile.js ./utils/*.js ./APIKeys/*.js ./db/*/*.js"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,12 @@
     "postgresql": "0.0.1"
   },
   "devDependencies": {
-    "node-fetch": "^2.3.0",
+    "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
-    "mocha": "^5.2.0"
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
+    "mocha": "^5.2.0",
+    "node-fetch": "^2.3.0"
   }
 }
